--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,7 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-serif: var(--font-julius-sans-one);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -46,6 +47,26 @@ body {
   stroke-width: 4px; /* Thicker line on hover */
   fill: #FFB81C; /* Highlight arrowhead color */
   cursor: pointer; /* Indicate clickability */
+}
+
+/* global scrollbar reset */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #a0a0a0; /* neutral gray */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #a0a0a0 transparent; /* for Firefox */
 }
 
 /* You could also animate dash-arrays for a "flowing" effect */
